REload page for employee

--- a/app/views/shared/create.js.slim
+++ b/app/views/shared/create.js.slim
@@ -4,6 +4,7 @@
 | if(errorMessages.length > 1) {
 |   showErrorMessage(errorMessages);
 | } else {
+	location.reload();
 |   removeErrorMessage();
 |   $('.provisioning .edit-buttons a.cancel').click();
 |   $(tableSelector).click();
