--- a/app/views/trips/angular_views/_routing.html
+++ b/app/views/trips/angular_views/_routing.html
@@ -42,6 +42,7 @@
       </div>
 
       <div class="col-md-3">
+        <toaster-container></toaster-container>
         <div class="btn-toolbar float-right" role="toolbar">
           <div class="btn-group" role="group">
             <button type="button" ng-click="finalizeRoutes()" class="btn btn-terniary-blue">Finalize</button>
