--- a/app/views/trips/angular_views/_routing.html
+++ b/app/views/trips/angular_views/_routing.html
@@ -37,7 +37,7 @@
             </div>
           </div>
 
-          <button type="button" ng-click="generateRoute(siteId, JSON.parse(selectedShift.id) , filterDate, JSON.parse(selectedShift.trip_type))" class="btn btn-terniary-disable">OK</button>
+          <button type="button" ng-click="generateRoute(siteId, JSON.parse(selectedShift.id) , filterDate, JSON.parse(selectedShift.trip_type))" class="btn btn-terniary-blue">OK</button>
         </form>
       </div>
 
@@ -145,7 +145,7 @@
                           <div class="employee-cluster-panel-title">
                             <input type="checkbox" ng-change="selectRoute(container)" ng-model="container.selected"
                               name="route" class="tick">
-                            <span class="travel-group-name">Travel Group 5 HB</span>
+                            <span class="travel-group-name">#UNIQUE_ID {{container.routeId}} </span>
                           </div>
                         </div>
 
@@ -307,7 +307,7 @@
           <div class="employee-cluster-panel custom-panel-map">
             <div class="employee-cluster-panel-heading">
               <div class="employee-cluster-panel-title">
-                <span class="travel-group-name">Travel Group 5 HB</span>
+                <span class="travel-group-name">Map</span>
               </div>
             </div>
 
