--- a/app/views/sites/_form.html.slim
+++ b/app/views/sites/_form.html.slim
@@ -161,7 +161,7 @@ div#site_html
       input#party_gstin_no[class="form-control" type="text" name="party_gstin_no" value=""]
 
 
-  p[style="font-size:18px; font-weight:600; margin-left:10px"]
+  p[style="font-size:18px; font-weight:600; margin-left:10px; display: none"]
     | Billing Attributes
   .row
     -if current_user.employer? || current_user.admin?
