--- a/app/views/trips/angular_views/_trip_board.html
+++ b/app/views/trips/angular_views/_trip_board.html
@@ -32,7 +32,9 @@
           <div class="form-group pr-2">
             <div class="form-group pr-2">
               <p class="input-group custom-date date_style ">
-                <input type="text" class="form-control data_in_style" ng-change="getAllTrips()"
+                <input type="text"  
+                  style="z-index: inherit;"
+                  class="form-control data_in_style" ng-change="getAllTrips()"
                   datepicker-popup="{{format}}" ng-model="filterDate" is-open="opened" datepicker-options="dateOptions"
                   date-disabled="disabled(date, mode)" ng-required="true" close-text="Close" />
                 <span class="input-group-btn-datePicket">
@@ -79,7 +81,7 @@
       <div class="col-md-2 pad-8">
         <div class="card-analytic special">
           <div class="card-inner-wrapper">
-            <div class="text">DELYED</div>
+            <div class="text">DELAYED</div>
             <div class="number">{{stats.delayed_trips}}</div>
           </div>
         </div>
@@ -95,7 +97,7 @@
       <div class="col-md-2 pad-8">
         <div class="card-analytic routes">
           <div class="card-inner-wrapper">
-            <div class="text">PENDING ACCEPTENCE</div>
+            <div class="text">PENDING ACCEPTANCE</div>
             <div class="number">{{stats.pending_acceptance_trips}}</div>
           </div>
         </div>
@@ -200,7 +202,7 @@
       <div class="row">
         <div class="col-md-4">
           <div class="pop-img-card">
-            <table class="table table-bordered table-striped table-condensed">
+            <table class="table table-scroll table-bordered table-striped table-condensed">
               <thead class="pop-table-head">
                 <tr>
                   <th>Employee</th>
@@ -216,7 +218,8 @@
                 </tr>
               </tbody>
             </table>
-            <div class="container">
+          
+            <div class="container" style="width:100%;">
               <div>
                 <span class="pop-name">Shift</span>
                 <span class="pop-status">{{modelData.shift_time}}</span>
@@ -232,7 +235,7 @@
         <div class="col-md-4">
           <div class="pop-img-card">
             <div id="googleMap" style="width:100%;height:200px;"></div>
-            <div class="container">
+            <div class="container" style="width:100%;">
               <div>
                 <span class="pop-name">Duration</span>
                 <span class="pop-status">{{modelData.tripInfo[0].total_time}} Mins</span>
@@ -247,7 +250,7 @@
         <div class="col-md-4">
           <div class="pop-img-card">
             <img src="../assets/angular_images/img_avatar.png" alt="Avatar" style="width:100%">
-            <div class="container">
+            <div class="container" style="width:100%;">
               <span class="pop-name">{{modelData.driver_name}}</span>
               <span class="pop-status">{{modelData.tripInfo[0].vehicle_type}}</span>
               <span class="pop-carNumber"> {{modelData.vehicle_number}}</span>
