--- a/app/views/trips/angular_views/_routing.html
+++ b/app/views/trips/angular_views/_routing.html
@@ -139,11 +139,11 @@
                       <!-- | filter :{vehicle_allocated:search} | range : 'empty_seats' : slider_empty.minValue : slider_empty.maxValue | range : 'total_seats' : slider_occupied.minValue : slider_occupied.maxValue -->
                       <div ng-repeat="container in containers | filter :{vehicle_allocated:search}"
                         no-drag dnd-callback="container.employees.length" class="employee-cluster-panel">
-                        <div class="employee-cluster-panel-heading">
-                          <div class="employee-cluster-panel-title">
+                        <div class="employee-cluster-panel-heading" ng-class="container.vehicle_allocated === 'Y'?'allocated_route':'un_allocated_route'">
+                          <div class="title_container" >
                             <input type="checkbox" ng-change="selectRoute(container)" ng-model="container.selected"
-                              name="route" class="tick">
-                            <span class="travel-group-name">#UNIQUE_ID {{container.routeId}} </span>
+                              name="route" class="tick" style="height: 30px; width: 30px;" ng-show="container.status !== 'assign_requested'">
+                            <span class="title_text">#UNIQUE_ID {{}} </span>
                           </div>
                         </div>
 
