trip board, guardlist , vehicle list, vehicletype on route

--- a/app/views/trips/angular_views/_routing.html
+++ b/app/views/trips/angular_views/_routing.html
@@ -143,7 +143,7 @@
                           <div class="title_container" >
                             <input type="checkbox" ng-change="selectRoute(container)" ng-model="container.selected"
                               name="route" class="tick" style="height: 30px; width: 30px;" ng-show="container.status !== 'assign_requested'">
-                            <span class="title_text">#UNIQUE_ID {{}} </span>
+                            <span class="title_text"># {{container.vehicle_type}} </span>
                           </div>
                         </div>
 
