angular changes, trips assign driver api changes

--- a/app/views/trips/angular_views/_routing.html
+++ b/app/views/trips/angular_views/_routing.html
@@ -68,7 +68,7 @@
         <div class="card-analytic kilometers">
           <div class="card-inner-wrapper">
             <div class="text">KILOMETRES</div>
-            <div class="number">{{stats.kilometres}}</div>
+            <div class="number" >{{roundValue(stats.kilometres)}}</div>
           </div>
         </div>
       </div>
