roster time css changes

--- a/app/views/trips/angular_views/_roster.html
+++ b/app/views/trips/angular_views/_roster.html
@@ -53,8 +53,8 @@
           <div class="btn-toolbar float-right" role="toolbar">
               <div class="">
                   <button ng-click="addCustomeRoute()" type="button"
-                      class="btn btn-terniary-disable fa-search-custom">COSTUM
-                      ROUTE</button>
+                      class="btn btn-terniary fa-search-custom" style="float: right; background-color: #384266;">Add Custom
+                      Route</button>
               </div>
           </div>
 
@@ -292,7 +292,7 @@
                                                               required.</span>
                                                               </div> -->
                                       <input type="time" id="to_time" name="to_time" class="form-control" ng-model="to_time"
-                                          placeholder="Time" min="08:00:00" max="17:00:00" required />
+                                          placeholder="Time" required />
                                           <span ng-show="hasError('to_time', 'required')" class="help-block">To Time is
                                                   required.</span>
                                                   </div>
