--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -12,7 +12,7 @@ html ng-app="app"
 
     = stylesheet_link_tag 'application', media: 'all'
     = javascript_include_tag 'application'
-    = favicon_link_tag 'favicon.ico'
+    = favicon_link_tag 'favicon_1.ico'
     = csrf_meta_tags
     script data-require="ui-bootstrap@*" data-semver="0.13.0" src="http://angular-ui.github.io/bootstrap/ui-bootstrap-tpls-0.13.0.min.js" 
 
