contracts css resolved

--- a/app/views/configurators/angular_views/_contracts.html
+++ b/app/views/configurators/angular_views/_contracts.html
@@ -3,7 +3,7 @@
         <h2 class="main-title">Create Contract</h2>
         <link rel="stylesheet"
             href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-        <link href="/css/contract.css" rel="stylesheet">
+        <link href="../assets/contract.css" rel="stylesheet">
         <div class="tab-content-area">
             <div class="row">
                 <div class="col-md-6">
