Fixing bugs for customer

--- a/app/views/provisioning/_employee_company.html.slim
+++ b/app/views/provisioning/_employee_company.html.slim
@@ -9,13 +9,11 @@
             th
               | Name
             th
-              | HQ Address
+              | Category
             th
-              | Business Type
+              | City
             th
-              | PAN
-            th
-              | Service Tax No.
+              | State
             th
               | Action
         tbody
