--- a/app/views/sites/_form.html.slim
+++ b/app/views/sites/_form.html.slim
@@ -2,30 +2,32 @@ div#site_html
   .row
     .col-md-4.no-margin
       label.site_labels for="siteName"
-        | Name    
-      input#siteName[class="form-control" type="text" name="siteName" value=""]
-    .col-md-4.no-margin
-      label.site_labels for="phone"
-        | Phone    
-      input#phone[class="form-control" type="text" name="phone" value=""]      
+        | Name*    
+      input#siteName[class="form-control" type="text" name="siteName" value="" required= "true"]
+    /!
+        .col-md-4.no-margin
+          label.site_labels for="phone"
+            | Phone    
+          input#phone[class="form-control" type="text" name="phone" value=""]      
     .col-md-4.no-margin
       label.site_labels for="company"
         | Company    
-      select.form-control#company
-        option [value="0"]
+      select.form-control#company required="true"
+        option [value="0"] 
           | Choose Company    
-    .col-md-4.no-margin
-      label.site_labels for="address"
-        | Address
-      input#address[class="form-control" type="text" name="address" value=""]
-    .col-md-4.no-margin
-      label.site_labels for="admin_name"
-        | Adminname
-      input#admin_name[class="form-control" type="text" name="admin_name" value=""]
-    .col-md-4.no-margin
-      label.site_labels for="admin_email_id"
-        | Admin email id
-      input#admin_email_id[class="form-control" type="text" name="admin_email_id" value=""]
+    /!
+      .col-md-4.no-margin
+        label.site_labels for="address"
+          | Address
+        input#address[class="form-control" type="text" name="address" value=""]
+      .col-md-4.no-margin
+        label.site_labels for="admin_name"
+          | Adminname
+        input#admin_name[class="form-control" type="text" name="admin_name" value=""]
+      .col-md-4.no-margin
+        label.site_labels for="admin_email_id"
+          | Admin email id
+        input#admin_email_id[class="form-control" type="text" name="admin_email_id" value=""]
     .col-md-4.no-margin
       label.site_labels for="site_code"
         | site_code
@@ -36,48 +38,48 @@ div#site_html
       input#branch_name[class="form-control" type="text" name="branch_name" value=""]
     .col-md-4.no-margin
       label.site_labels for="contact_name"
-        | Contact Name
-      input#contact_name[class="form-control" type="text" name="contact_name" value=""]
+        | Contact Name*
+      input#contact_name[class="form-control" type="text" name="contact_name" value="" required="true"]
     .col-md-4.no-margin
       label.site_labels for="address_1"
-        | Address_1
-      input#address_1[class="form-control" type="text" name="address_1" value=""]
+        | Address_1*
+      input#address_1[class="form-control" type="text" name="address_1" value="" required="true"]
     .col-md-4.no-margin
       label.site_labels for="address_2"
-        | Address_2
-      input#address_2[class="form-control" type="text" name="address_2" value=""]
+        | Address_2*
+      input#address_2[class="form-control" type="text" name="address_2" value="" required="true"]
     .col-md-4.no-margin
       label.site_labels for="address_3"
         | Address_3
       input#address_3[class="form-control" type="text" name="address_3" value=""]
     .col-md-4.no-margin
       label.site_labels for="pin"
-        | Pin
-      input#pin[class="form-control" type="text" name="pin" value=""]
+        | Pin*
+      input#pin[class="form-control" type="text" name="pin" value="" required="true"]
     .col-md-4.no-margin
       label.site_labels for="state"
-        | State    
-      select.form-control#state
+        | State*    
+      select.form-control#state required="true"
         option [value="0"]
           | Choose State
     .col-md-4.no-margin
-      label.site_labels for="city"
-        | City    
+      label.site_labels for="city" required="true"
+        | City*    
       select.form-control#city
         option [value="0"]
           | Choose City
     .col-md-4.no-margin
       label.site_labels for="phone_1"
-        | Phone_1
-      input#phone_1[class="form-control" type="text" name="phone_1" value=""]
+        | Phone_1*
+      input#phone_1[class="form-control" type="text" name="phone_1" value="" required="true"]
     .col-md-4.no-margin
       label.site_labels for="phone_2"
         | Phone_2
       input#phone_2[class="form-control" type="text" name="phone_2" value=""]
     .col-md-4.no-margin
       label.site_labels for="pan_no"
-        | Pan No
-      input#pan_no[class="form-control" type="text" name="pan_no" value=""]
+        | Pan No*
+      input#pan_no[class="form-control" type="text" name="pan_no" value="" required="true"]
     .col-md-4.no-margin
       label.site_labels for="business_area"
         | City    
@@ -160,17 +162,17 @@ div#site_html
         Party gstin no
       input#party_gstin_no[class="form-control" type="text" name="party_gstin_no" value=""]
 
-
-  p[style="font-size:18px; font-weight:600; margin-left:10px"]
-    | Billing Attributes
-  .row
-    -if current_user.employer? || current_user.admin?
-      .col-md-4.no-margin
-        label.site_labels for="operator"
-          | Operator
-        select.form-control#operator
-          option [value="0"]
-            | Choose Operator      
+    /!
+      p[style="font-size:18px; font-weight:600; margin-left:10px"]
+        | Billing Attributes
+      .row
+        -if current_user.employer? || current_user.admin?
+          .col-md-4.no-margin
+            label.site_labels for="operator"
+              | Operator
+            select.form-control#operator
+              option [value="0"]
+                | Choose Operator      
 
     -if current_user.operator?
       .col-md-4.no-margin[style="display:none"]
